<resources>
    <string name="app_name">Projeto Jogo da Forca</string>
    <string name="nome">Nome:</string>
    <string name="nome_do_jogador">Nome do jogador</string>
    <string name="titulo_tela_inicial">Jogo da Forca</string>
    <string name="selecionar_avatar">Selecionar Avatar</string>
    <string name="avatar_do_jogador">Avatar do jogador</string>
    <string name="insira_suas_informacoes">Insira suas informações</string>
    <string name="jogar">Jogar</string>
    <string name="tempo_zerado">00:00</string>
    <string name="adicionar_palavra">Adicionar palavra</string>
    <string name="adicionar">Adicionar</string>
    <string name="voltar">Voltar</string>
    <string name="ok">OK</string>
    <string name="sair">Sair</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="adicionar_categoria">Adicionar categoria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoria">Categoria:</string>
    <string name="pontos">Pontos:</string>
    <string name="imagem_da_forca">Imagem da forca</string>
</resources>