<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.InfoJogoFragment">

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria" />

    <TextView
        android:id="@+id/tv_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pontos"/>

    <TextView
        android:id="@+id/tv_tempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempo_zerado"/>

</LinearLayout>